--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -3,7 +3,7 @@
 
     <h2>{{viewData.employee.firstName}}
       {{employee.lastName}}
-      - student:
+      - Employee:
       {{viewData.employee.employeeNum}}
     </h2>
     <hr />
